Revise personal and project descriptions in index.html
Updated personal description and project details for clarity and precision.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section class="hero container">
     <div class="hero-text">
       <h1><span class="visually-hidden">Aman Sunesh — </span>Designing intelligent systems — from quantum sensors to machine learning pipelines</h1>
-      <p>I'm a Computer Engineering student at NYU Abu Dhabi building practical tools at the intersection of sensing systems and machine learning. My work spans NV-center quantum sensing platforms with nanosecond pulse control, MNAR time-series modeling of sensor blackouts (state-dependent missingness + Kalman/EM pipelines), full-stack pharmacokinetic simulation apps, and ML pipelines for imaging and vision. I care about reproducibility, hardware–software synergy, and results that ship.</p>
+      <p>I’m a Computer Engineering student at NYU Abu Dhabi building practical tools at the intersection of sensing systems, probabilistic modeling, and scientific machine learning, shipping full-stack research software from data pipelines to deployment. My work spans NV-center quantum sensing platforms with nanosecond pulse control, probabilistic time-series modeling of MNAR sensor blackouts (state-dependent missingness + Kalman/EM pipelines), full-stack pharmacokinetic simulation apps, and ML pipelines for scientific time series, imaging, and vision. I care about uncertainty-aware inference, reproducibility, hardware–software synergy, and results that ship.</p>
       <div class="cta">
         <a
           class="btn primary"
@@ -122,7 +122,7 @@
   <section id="about" class="container section">
     <h2 class="section-title">About Me</h2>
     <div class="about">
-      <p>I work across AI and experimental systems, building everything from deep learning models to real-world sensing platforms. On the quantum side, I developed a <strong>full-stack NV-center spectrometer</strong> with nanosecond pulse control and a PyQt6 GUI for code-free experiment execution. Recently, I’ve been leaning hard into <strong>time-series + reliability</strong>: modeling <strong>information blackouts in MNAR sensor streams</strong> (state-dependent missingness) with Kalman filtering/RTS smoothing and EM learning, and turning these ideas into clean, reproducible research code. I also ship full-stack research tools, from PK/PD simulators to database-backed applications. I care about clarity, reproducibility, and building things that actually work.</p>
+      <p>I work across AI and experimental systems, building everything from deep learning models to real-world sensing platforms. On the quantum side, I developed a full-stack NV-center spectrometer with nanosecond pulse control and a PyQt6 GUI for code-free experiment execution. Recently, I’ve been leaning hard into Scientific ML for reliability and uncertainty: modeling information blackouts in MNAR sensor streams (state-dependent missingness) using state-space methods (Kalman filtering/RTS smoothing) and EM learning, and turning these ideas into clean, reproducible research code with robust evaluation. I also ship full-stack research tools, from PK/PD simulators to database-backed applications. I care about clarity, reproducibility, and building things that actually work.</p>
 
       <div class="facts card">
         <div class="kv"><span class="k">Location</span><span class="v">Manhattan, New York</span></div>
@@ -296,7 +296,7 @@
     <div class="grid three">
       <a class="project card" href="https://github.com/BlackoutBayes/Modeling-Information-Blackouts-in-MNAR-Time-Series" target="_blank" rel="noopener">
         <h3>Modeling Information Blackouts (MNAR Time Series)</h3>
-        <p>MNAR-aware linear dynamical system for traffic sensors, modeling state-dependent outages; trained with EM and inferred with EKF/RTS, outperforming LOCF and MAR baselines..</p>
+        <p>MNAR-aware linear dynamical system for traffic sensors, modeling state-dependent outages; trained with EM and inferred with EKF/RTS, outperforms LOCF and MAR baselines.</p>
         <div class="tags"><span>Time Series</span><span>Kalman Filtering</span><span>EM</span><span>MNAR</span><span>Python</span></div>
       </a>
       <a class="project card" href="https://github.com/Aman-Sunesh/QuPyT-GUI-for-Quantum-Sensing-Experiments" target="_blank" rel="noopener">
