Update awards section with new certifications

--- a/index.html
+++ b/index.html
@@ -461,6 +461,17 @@
   <section id="awards" class="container section">
     <h2 class="section-title">Certifications & Awards</h2>
 
+  <div class="grid two">
+    <div class="card award">
+      <h3>iGEM 2025 <span class="pill">Gold Medal</span> <span class="pill">Best Integrated Human Practices</span></h3>
+      <div class="meta">International Genetically Engineered Machine (iGEM) Competition</div>
+      <ul class="bullets tight">
+        <li>Recognized for high-impact work in CDG-focused synthetic biology integrating stakeholder feedback into technical decisions.</li>
+        <li>Role: Software & Modeling Lead, built and shipped a PK/PD modeling platform used for simulation, fitting, and reporting.</li>
+      </ul>
+    </div>
+
+
     <div class="grid two">
       <div class="card award">
         <h3>Best Research Poster <span class="pill">1st Place</span></h3>
@@ -479,16 +490,7 @@
           <li>Skills: quantum circuits, transpilation, error suppression/mitigation, basics of QEC.</li>
         </ul>
       </div>
-
-      <div class="card award">
-        <h3>Qiskit Global Summer School 2024 <span class="pill">Certification</span></h3>
-        <div class="meta">IBM • Qiskit</div>
-        <ul class="bullets tight">
-          <li>Hands-on labs: Circuit Transpilation, Error Suppression & Mitigation, Simulating Nature.</li>
-          <li>Certificate of participation and successful completion of core labs.</li>
-        </ul>
-      </div>
-
+    
       <div class="card award">
         <h3>International Youth Math Challenge <span class="pill">Silver Honour</span></h3>
         <div class="meta">IYMC</div>
@@ -496,12 +498,13 @@
           <li>Recognized for high performance in an international problem-solving competition.</li>
         </ul>
       </div>
-  
+    
       <div class="card award">
-        <h3>International Computer Science Competition (ICSC) 2025 <span class="pill">Milestone</span></h3>
-        <div class="meta">ICSC</div>
+        <h3>Qiskit Global Summer School 2024 <span class="pill">Certification</span></h3>
+        <div class="meta">IBM • Qiskit</div>
         <ul class="bullets tight">
-          <li>Algorithmic Problem Solving (graphs, DP, combinatorics, optimization).</li>
+          <li>Hands-on labs: Circuit Transpilation, Error Suppression & Mitigation, Simulating Nature.</li>
+          <li>Certificate of participation and successful completion of core labs.</li>
         </ul>
       </div>
 
@@ -520,16 +523,16 @@
           <li>Completed NYU venture-building bootcamp focused on startup fundamentals and execution.</li>
         </ul>
       </div>
-
+  
       <div class="card award">
-        <h3>IBM Courses <span class="pill">Certification</span></h3>
-        <div class="meta">IBM</div>
+        <h3>International Computer Science Competition (ICSC) 2025 <span class="pill">Milestone</span></h3>
+        <div class="meta">ICSC</div>
         <ul class="bullets tight">
-          <li>Intro to Computer Vision &amp; Image Processing — fundamentals of CV techniques.</li>
-          <li>Intro to HTML, CSS &amp; JavaScript — web foundations and basic interactivity.</li>
+          <li>Algorithmic Problem Solving (graphs, DP, combinatorics, optimization).</li>
         </ul>
       </div>
   </section>
+  
   <section id="contact" class="container section">
     <h2 class="section-title">Contact</h2>
     <form class="contact" id="contact-form">
