--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="x-ua-compatible" content="IE=edge">
+
 
   <title>Aman Sunesh | Computer Engineering @ NYU Abu Dhabi | GitHub & Projects</title>
 
@@ -28,7 +30,7 @@
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
   <meta name="author" content="Aman Sunesh">
 
-  <link rel="icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
   <script type="application/ld+json">
@@ -86,7 +88,15 @@
   <section class="hero container">
     <div class="hero-text">
       <h1><span class="visually-hidden">Aman Sunesh — </span>Designing intelligent systems — from quantum sensors to machine learning pipelines</h1>
-      <p>I’m a Computer Engineering student at NYU Abu Dhabi building practical tools at the intersection of sensing systems, probabilistic modeling, and scientific machine learning, shipping full-stack research software from data pipelines to deployment. My work spans NV-center quantum sensing platforms with nanosecond pulse control, probabilistic time-series modeling of MNAR sensor blackouts (state-dependent missingness + Kalman/EM pipelines), full-stack pharmacokinetic simulation apps, and ML pipelines for scientific time series, imaging, and vision. I care about uncertainty-aware inference, reproducibility, hardware–software synergy, and results that ship.</p>
+      <p>
+        I’m a Computer Engineering student at NYU Abu Dhabi building practical tools at the intersection of
+        <strong>sensing systems</strong>, <strong>probabilistic modeling</strong>, and <strong>scientific machine learning</strong>,
+        shipping full-stack research software from data pipelines to deployment.
+        My work spans NV-center quantum sensing platforms with nanosecond pulse control, probabilistic time-series modeling of
+        <strong>MNAR sensor blackouts</strong> (state-dependent missingness + Kalman/EM pipelines), full-stack pharmacokinetic simulation apps,
+        and ML pipelines for scientific time series, imaging, and vision.
+        I care about <strong>uncertainty-aware inference</strong>, reproducibility, hardware–software synergy, and results that ship.
+      </p>
       <div class="cta">
         <a
           class="btn primary"
@@ -122,8 +132,15 @@
   <section id="about" class="container section">
     <h2 class="section-title">About Me</h2>
     <div class="about">
-      <p>I work across AI and experimental systems, building everything from deep learning models to real-world sensing platforms. On the quantum side, I developed a full-stack NV-center spectrometer with nanosecond pulse control and a PyQt6 GUI for code-free experiment execution. Recently, I’ve been leaning hard into Scientific ML for reliability and uncertainty: modeling information blackouts in MNAR sensor streams (state-dependent missingness) using state-space methods (Kalman filtering/RTS smoothing) and EM learning, and turning these ideas into clean, reproducible research code with robust evaluation. I also ship full-stack research tools, from PK/PD simulators to database-backed applications. I care about clarity, reproducibility, and building things that actually work.</p>
-
+    <p>
+    I work across AI and experimental systems, building everything from deep learning models to real-world sensing platforms.
+    On the quantum side, I developed a full-stack NV-center spectrometer with nanosecond pulse control and a PyQt6 GUI for code-free experiment execution.
+    Recently, I’ve been leaning hard into <strong>Scientific ML for reliability and uncertainty</strong>:
+    modeling information blackouts in <strong>MNAR sensor streams</strong> (state-dependent missingness) using state-space methods
+    (Kalman filtering/RTS smoothing) and EM learning, and turning these ideas into clean, reproducible research code with robust evaluation.
+    I also ship full-stack research tools, from PK/PD simulators to database-backed applications.
+    I care about clarity, reproducibility, and building things that actually work.
+    </p>
       <div class="facts card">
         <div class="kv"><span class="k">Location</span><span class="v">Manhattan, New York</span></div>
         <div class="kv"><span class="k">Email</span><span class="v"><a href="mailto:as18181@nyu.edu">as18181@nyu.edu</a></span></div>
@@ -458,77 +475,78 @@
     </article>
   </section>
 
-  <section id="awards" class="container section">
-    <h2 class="section-title">Certifications & Awards</h2>
-      <div class="grid two">
-        <div class="card award">
-          <h3>Best Research Poster <span class="pill">1st Place</span></h3>
-          <div class="meta">NYUAD Summer Research Symposium 2025</div>
-          <ul class="bullets tight">
-            <li>Project: Quantum Diamond Spectrometer (NV-center sensing) with nanosecond pulse control.</li>
-          </ul>
-        </div>
-      </div>
-  
-      <div class="card award">
-        <h3>iGEM 2025 <span class="pill">Gold Medal</span> <span class="pill">Best Integrated Human Practices</span></h3>
-        <div class="meta">International Genetically Engineered Machine (iGEM) Competition</div>
-        <ul class="bullets tight">
-          <li>Recognized for high-impact work in CDG-focused synthetic biology integrating stakeholder feedback into technical decisions.</li>
-          <li>Role: Software & Modeling Lead, built and shipped a PK/PD modeling platform used for simulation, fitting, and reporting.</li>
-        </ul>
-      </div>
+<section id="awards" class="container section">
+  <h2 class="section-title">Certifications &amp; Awards</h2>
 
-      <div class="card award">
-        <h3>IBM Quantum Excellence <span class="pill">Award</span></h3>
-        <div class="meta">IBM</div>
-        <ul class="bullets tight">
-          <li>Awarded for completing all Qiskit labs with strong performance.</li>
-          <li>Skills: quantum circuits, transpilation, error suppression/mitigation, basics of QEC.</li>
-        </ul>
-      </div>
-    
-      <div class="card award">
-        <h3>International Youth Math Challenge <span class="pill">Silver Honour</span></h3>
-        <div class="meta">IYMC</div>
-        <ul class="bullets tight">
-          <li>Recognized for high performance in an international problem-solving competition.</li>
-        </ul>
-      </div>
-    
-      <div class="card award">
-        <h3>Qiskit Global Summer School 2024 <span class="pill">Certification</span></h3>
-        <div class="meta">IBM • Qiskit</div>
-        <ul class="bullets tight">
-          <li>Hands-on labs: Circuit Transpilation, Error Suppression & Mitigation, Simulating Nature.</li>
-          <li>Certificate of participation and successful completion of core labs.</li>
-        </ul>
-      </div>
+  <div class="grid two">
+    <div class="card award">
+      <h3>Best Research Poster <span class="pill">1st Place</span></h3>
+      <div class="meta">NYUAD Summer Research Symposium 2025</div>
+      <ul class="bullets tight">
+        <li>Project: Quantum Diamond Spectrometer (NV-center sensing) with nanosecond pulse control.</li>
+      </ul>
+    </div>
 
-      <div class="card award">
-        <h3>5-Day AI Agents Intensive Course with Google <span class="pill">Certification</span></h3>
-        <div class="meta">Kaggle • Issued Dec 2025</div>
-        <ul class="bullets tight">
-          <li>Training in agentic AI development and practical AI-agent workflows.</li>
-        </ul>
-      </div>
+    <div class="card award">
+      <h3>iGEM 2025 <span class="pill">Gold Medal</span> <span class="pill">Best Integrated Human Practices</span></h3>
+      <div class="meta">International Genetically Engineered Machine (iGEM) Competition</div>
+      <ul class="bullets tight">
+        <li>Recognized for high-impact work in CDG-focused synthetic biology integrating stakeholder feedback into technical decisions.</li>
+        <li>Role: Software &amp; Modeling Lead, built and shipped a PK/PD modeling platform used for simulation, fitting, and reporting.</li>
+      </ul>
+    </div>
 
-      <div class="card award">
-        <h3>NYU Startup Bootcamp <span class="pill">Certification</span></h3>
-        <div class="meta">NYU Entrepreneurial Institute • Issued Oct 2025</div>
-        <ul class="bullets tight">
-          <li>Completed NYU venture-building bootcamp focused on startup fundamentals and execution.</li>
-        </ul>
-      </div>
-  
-      <div class="card award">
-        <h3>International Computer Science Competition (ICSC) 2025 <span class="pill">Milestone</span></h3>
-        <div class="meta">ICSC</div>
-        <ul class="bullets tight">
-          <li>Algorithmic Problem Solving (graphs, DP, combinatorics, optimization).</li>
-        </ul>
-      </div>
-  </section>
+    <div class="card award">
+      <h3>IBM Quantum Excellence <span class="pill">Award</span></h3>
+      <div class="meta">IBM</div>
+      <ul class="bullets tight">
+        <li>Awarded for completing all Qiskit labs with strong performance.</li>
+        <li>Skills: quantum circuits, transpilation, error suppression/mitigation, basics of QEC.</li>
+      </ul>
+    </div>
+
+    <div class="card award">
+      <h3>International Youth Math Challenge <span class="pill">Silver Honour</span></h3>
+      <div class="meta">IYMC</div>
+      <ul class="bullets tight">
+        <li>Recognized for high performance in an international problem-solving competition.</li>
+      </ul>
+    </div>
+
+    <div class="card award">
+      <h3>Qiskit Global Summer School 2024 <span class="pill">Certification</span></h3>
+      <div class="meta">IBM • Qiskit</div>
+      <ul class="bullets tight">
+        <li>Hands-on labs: Circuit Transpilation, Error Suppression &amp; Mitigation, Simulating Nature.</li>
+        <li>Certificate of participation and successful completion of core labs.</li>
+      </ul>
+    </div>
+
+    <div class="card award">
+      <h3>5-Day AI Agents Intensive Course with Google <span class="pill">Certification</span></h3>
+      <div class="meta">Kaggle • Issued Dec 2025</div>
+      <ul class="bullets tight">
+        <li>Training in agentic AI development and practical AI-agent workflows.</li>
+      </ul>
+    </div>
+
+    <div class="card award">
+      <h3>NYU Startup Bootcamp <span class="pill">Certification</span></h3>
+      <div class="meta">NYU Entrepreneurial Institute • Issued Oct 2025</div>
+      <ul class="bullets tight">
+        <li>Completed NYU venture-building bootcamp focused on startup fundamentals and execution.</li>
+      </ul>
+    </div>
+
+    <div class="card award">
+      <h3>International Computer Science Competition (ICSC) 2025 <span class="pill">Milestone</span></h3>
+      <div class="meta">ICSC</div>
+      <ul class="bullets tight">
+        <li>Algorithmic Problem Solving (graphs, DP, combinatorics, optimization).</li>
+      </ul>
+    </div>
+  </div>
+</section>
   
   <section id="contact" class="container section">
     <h2 class="section-title">Contact</h2>
