Enhance HTML metadata and improve accessibility
Updated meta tags for viewport, color scheme, and referrer. Changed the title and added Twitter meta tags. Improved accessibility for navigation and form inputs.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta http-equiv="x-ua-compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <meta name="color-scheme" content="light dark">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
 
 
-  <title>Aman Sunesh | Computer Engineering @ NYU Abu Dhabi | GitHub & Projects</title>
+  <title>Aman Sunesh | Computer Engineering & Applied Math @ NYU Abu Dhabi | Portfolio</title>
 
   <meta name="description" content="Aman Sunesh — Computer Engineering & Applied Math @ NYU Abu Dhabi ’27 (Study Away @ NYU Tandon). Quantum sensing (NV centers), MNAR time-series modeling, and full-stack research tools. GitHub: github.com/Aman-Sunesh">
   
@@ -24,8 +25,15 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://aman-sunesh.github.io/images/profile.jpg">
   <meta property="og:image:alt" content="Portrait of Aman Sunesh">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="Aman Sunesh">
   <meta property="og:locale" content="en_US">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Aman Sunesh — Portfolio">
+  <meta name="twitter:description" content="Computer Engineering @ NYU Abu Dhabi (Study Away @ NYU Tandon). Quantum sensing, MNAR time-series modeling, and end-to-end scientific tools.">
+  <meta name="twitter:image" content="https://aman-sunesh.github.io/images/profile.jpg">
 
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
   <meta name="author" content="Aman Sunesh">
@@ -37,6 +45,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Person",
+    "@id": "https://aman-sunesh.github.io/#aman-sunesh",
     "name": "Aman Sunesh",
     "url": "https://aman-sunesh.github.io/",
     "image": "https://aman-sunesh.github.io/images/profile.jpg",
@@ -46,6 +55,7 @@
     "sameAs": [
       "https://github.com/Aman-Sunesh",
       "https://www.linkedin.com/in/aman-sunesh/",
+      "https://www.youtube.com/@AmanSunesh",
       "https://www.kaggle.com/amansunesh/",
       "https://x.com/AmanSunesh"
     ]
@@ -54,7 +64,8 @@
 
   <!-- Existing assets -->
   <link rel="sitemap" type="application/xml" href="/sitemap.xml">
-  <link rel="preconnect" href="https://cdn.jsdelivr.net">
+  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+  <link rel="preload" as="image" href="/images/profile.jpg">
   <link rel="stylesheet" href="/style.css?v=2">
 
   <!-- EmailJS & site scripts -->
@@ -69,11 +80,19 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+<a class="skip-link" href="#home">Skip to content</a>
 <header class="site-header">
   <div class="container nav">
     <a href="#home" class="brand">Aman Sunesh</a>
-    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
-    <nav class="nav-links" id="nav-links">
+    <button
+      class="menu-toggle"
+      id="menu-toggle"
+      type="button"
+      aria-label="Toggle navigation"
+      aria-controls="nav-links"
+      aria-expanded="false"
+    >☰</button>
+    <nav class="nav-links" id="nav-links" aria-label="Primary">
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
       <a href="#experience">Experience</a>
@@ -124,6 +143,8 @@
       <img src="/images/profile.jpg"
           alt="Portrait of Aman Sunesh"
           class="portrait"
+          width="640"
+          height="640"
           fetchpriority="high"
           decoding="async">
     </div>
@@ -314,6 +335,11 @@
       <a class="project card" href="https://github.com/BlackoutBayes/Modeling-Information-Blackouts-in-MNAR-Time-Series" target="_blank" rel="noopener">
         <h3>Modeling Information Blackouts (MNAR Time Series)</h3>
         <p>MNAR-aware linear dynamical system for traffic sensors, modeling state-dependent outages; trained with EM and inferred with EKF/RTS, outperforms LOCF and MAR baselines.</p>
+        <p class="meta">
+          <a href="https://arxiv.org/abs/2601.01480" target="_blank" rel="noopener noreferrer">arXiv</a>
+          · <a href="https://doi.org/10.5281/zenodo.18146529" target="_blank" rel="noopener noreferrer">Zenodo DOI</a>
+          · <a href="https://doi.org/10.31224/6180" target="_blank" rel="noopener noreferrer">engrXiv</a>
+        </p>
         <div class="tags"><span>Time Series</span><span>Kalman Filtering</span><span>EM</span><span>MNAR</span><span>Python</span></div>
       </a>
       <a class="project card" href="https://github.com/Aman-Sunesh/QuPyT-GUI-for-Quantum-Sensing-Experiments" target="_blank" rel="noopener">
@@ -554,16 +580,17 @@
       <div class="grid two">
         <div class="field">
           <label for="name">Name</label>
-          <input id="name" name="name" type="text" placeholder="Your name" required>
+          <input id="name" name="name" type="text" placeholder="Your name" autocomplete="name" required>
         </div>
         <div class="field">
           <label for="email">Email</label>
-          <input id="email" name="email" type="email" placeholder="you@example.com" required>
+          <input id="email" name="email" type="email" placeholder="you@example.com" autocomplete="email" inputmode="email" required>
         </div>
       </div>
       <div class="field">
         <label for="message">Message</label>
-        <textarea id="message" name="message" rows="6" placeholder="How can I help?" required></textarea>
+        <textarea id="message" name="message" rows="6" placeholder="How can I help?" autocomplete="off" required></textarea>
+       </div>
       </div>
       <button class="btn primary" id="submit-btn" type="submit">Send Message</button>
       <p class="form-status" id="form-status" role="status" aria-live="polite"></p>
@@ -574,8 +601,8 @@
 <footer class="site-footer">
   <div class="container foot">
     <div class="foot-links">
-      <a href="https://github.com/Aman-Sunesh" target="_blank" rel="noopener">GitHub</a>
-      <a href="https://www.linkedin.com/in/aman-sunesh" target="_blank" rel="noopener">LinkedIn</a>
+      <a href="https://github.com/Aman-Sunesh" target="_blank" rel="noopener noreferrer">GitHub</a>
+      <a href="https://www.linkedin.com/in/aman-sunesh" target="_blank" rel="noopener noreferrer">LinkedIn</a>
       <a href="mailto:as18181@nyu.edu" aria-label="Email Aman">Email</a>
     </div>
     <div class="foot-copy">© <span id="year"></span> Aman Sunesh</div>
