Correct title formatting in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="IE=edge">
 
 
-  <title>AmanSunesh | Computer Engineering @ NYU Abu Dhabi | GitHub & Projects</title>
+  <title>Aman Sunesh | Computer Engineering @ NYU Abu Dhabi | GitHub & Projects</title>
 
   <meta name="description" content="Aman Sunesh — Computer Engineering & Applied Math @ NYU Abu Dhabi ’27 (Study Away @ NYU Tandon). Quantum sensing (NV centers), MNAR time-series modeling, and full-stack research tools. GitHub: github.com/Aman-Sunesh">
   
